fixed image layout

--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ h1 {
 .movie {
   width: 310px;
   height: 460px;
-  margin: 1.5rem;
+  margin: 1.5rem 1rem;
 
   position: relative;
   border-radius: 12px;
@@ -150,6 +150,7 @@ h1 {
 .movie div:nth-of-type(2) img {
   height: 100%;
   width: 100%;
+  object-fit: contain;
 }
 
 .movie div:nth-of-type(3) {
